# build-ai-products-with-gemma

./: README.md  pyproject.toml
1-ai-app-basics/: README.md  app.py  modelspec  requirements.txt
1-ai-app-basics/apps/: app.py  app_gradio.py
1-ai-app-basics/notebooks/: 1-ai-app-mvp.ipynb  2-evals-by-vibes.ipynb  3-repeatable-evals-harness.ipynb  4-optimization.ipynb  eval_harness.py
1-ai-app-basics/notebooks/data/: traces.csv
1-ai-app-basics/notebooks/text_sources/: article_1.txt  article_2.txt
2-ai-agent-basics/: README.md  pyproject.toml
2-ai-agent-basics/apps/: README.md  agent-demo-gemma.py  gemini_client.py  gemma4-app.py  weather_server.py
2-ai-agent-basics/notebooks/: 1-ai-agent-mvp.ipynb  2-basic-function-calls.ipynb
3-ai-image-agent/: README.md  pyproject.toml  transcript.txt
3-ai-image-agent/apps/: agent-demo-gemma.py  app.py  gemma4-app.py  gemma_client.py  test_server.py
3-ai-image-agent/apps/vision-playground/: vision_app.py  vision_test.py
3-ai-image-agent/notebooks/: 0-ollama-basics.ipynb  1-basic-image-calls.ipynb  2-model-routing.ipynb
