[project]
name = "gemma-workshops"
version = "0.1.0"
description = "Gemma 4 workshop materials"
requires-python = ">=3.12"
dependencies = [
    "datasette>=0.65.1",
    "google-genai>=1.12.1",
    "google-generativeai>=0.8.5",
    "gradio>=5.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.0",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "pillow>=11.2.1",
]
